# component-sandbox-demo

./: .gitignore  README.md  guest.py  host.py
runner/: Cargo.toml
runner/src/: main.rs
wit/: sandbox.wit
